fix(select): truncate long texts with css

--- a/packages/components/src/select/Select.module.css
+++ b/packages/components/src/select/Select.module.css
@@ -225,6 +225,12 @@
   transform: translateY(-50%);
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .clearButton {
   padding: 0.5rem;
   margin: 0;
